--- a/style.css
+++ b/style.css
@@ -119,19 +119,21 @@ margin-bottom: -30px;
 }
 #paypageContainer{
   display: inline-flex;
+  width: 100%;
 }
 #paypagedescription{
-  background-image: url(./images/paypageimage.png);
-  display: inline-flex;
-  height: 600px;
-  width: auto;
-  width:100vmax;
-  margin-left: 40px;
-  margin-top: 20px;
+  display: inline;
+  height: 650px;
+  width: 30%;
+  margin-right: 0;
+  margin-top: 25px;
+  padding-left: 15%;
+  text-align: center;
+
 }
 #paypal-button-container{
   margin-top: 100px;
-  text-align: right;
+  text-align: center;
   margin-left: 40px;
 }
 #smart-button-container{
@@ -160,6 +162,51 @@ margin-bottom: -30px;
   margin-left: auto;
   margin-right: auto;
   width: 50%; 
+}
+#signupContainer{
+  
+  justify-content: center;
+}
+#regformContainer{
+  display: inline-flex;
+}
+#signupForm{
+  padding-top: -100px;
+}
+#zcampaignOptinForm{
+  padding-top: -100px;
+}
+#customForm{
+  margin-top: -100px;
+}
+#sf3zebb363fe3c1efc3d2bc602d3c360c4a586307df6c81da0dcada0c5566cae115d{
+  margin-top: -100px;
+}
+#parentSignUp{
+  display: inline;
+  max-width: 100vmax;
+  margin: 0 auto;
+  padding: 0 0;
+  clear:both;  
+}
+#child1HeaderText{
+  max-width: 100%;
+  font-size: 40px;
+  color: #ef7c04;
+  height: auto;
+  margin: 0 auto;
+  text-align: center;
+}
+#child1Form{
+  max-width: 100vmax;
+  width: 100px;
+  height: 100px;
+  margin: 0 auto;
+  padding-top: 150px;
+  padding-right: 250px;
+}
+#regLogo{
+  padding-left: 50px;
 }
 footer{
   background-color: black;
