--- a/style.css
+++ b/style.css
@@ -101,7 +101,7 @@ mark{
 text-align: center;
 }
 #smart-button-container{
-text-align: right;
+text-align: center;
 }
 #regForm{
 background-color: whitesmoke;
